# KnowLoop

./: .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SKILL.md  build.rs  config.yaml.docker  config.yaml.example  docker-compose.production.yml  docker-compose.yml  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
crates/neural-routing-core/: Cargo.toml
crates/neural-routing-core/src/: augmentation.rs  error.rs  lib.rs  mcts.rs  migration.rs  models.rs  proxy_model.rs  reward.rs  store.rs  traits.rs  validation.rs  vector_builder.rs
crates/neural-routing-gnn/: Cargo.toml
crates/neural-routing-policy/: Cargo.toml
crates/neural-routing-runtime/: Cargo.toml
docs/api/: mcp-tools.md  reference.md
docs/guides/: authentication.md  chat-websocket.md  foundation-kit.md  getting-started.md  multi-agent-workflow.md  protocols.md
docs/integrations/: claude-code.md  cursor.md  openai.md
docs/setup/: installation.md
packaging/debian/: docker-compose.services.yml  knowloop.service  postinst  postrm  prerm
packaging/homebrew/: knowloop.rb
packaging/rpm/: postinst.sh
proto/: murmure.proto
resources/cc-rules/: default.toml
scripts/: build-desktop.sh  seed-system-inference-protocol.sh  seed-wave-execution-protocol.sh  setup-murmure.sh  test.sh
src/: cli.rs  homeostasis.rs  lib.rs  main.rs  setup_claude.rs  test_helpers.rs  update.rs
src/analytics/: mod.rs  (+2 more)
tests/: integration_tests.rs  p2p_http_exchange.rs  p2p_integration.rs  parser_tests.rs  workspace_tests.rs
(+165 files in other folders)
